--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -5,7 +5,7 @@
     //"DBProvider": "mssql",
     //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BlazorDashboardDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
     "DBProvider": "postgresql",
-    "ConnectionString": "Server=81.71.6.38;Database=OnionTestDb;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
+    "ConnectionString": "Server=81.71.6.38;Database=OnionTest2Db;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
   },
   "Logging": {
     "LogLevel": {
@@ -35,5 +35,11 @@
     "Properties": {
       "Application": "OnionApp"
     }
+  },
+  "JwtSettings": {
+    "SecurityKey": "RZpSE2PXc@DJ2@dP~G6FWyaMcpShw",
+    "ExpireSeconds": "86400",
+    "Issuer": "WebAPI",
+    "Audience": "Onion"
   }
 }
