--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -21,7 +21,10 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
+	  <PackageReference Include="LazyCache" Version="2.4.0" />
+	  <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
     <PackageReference Include="Masuit.Tools.Core" Version="2.6.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
@@ -32,10 +35,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\Helper\" />
     <Folder Include="Common\Security\" />
     <Folder Include="Constants\" />
-    <Folder Include="Features\Users\Caching\" />
     <Folder Include="Resources\" />
     <Folder Include="Services\" />
   </ItemGroup>
