新增后台角色管理功能，以及修复一些已知问题

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Folder Include="Common\Security\" />
     <Folder Include="Constants\" />
+    <Folder Include="Features\Roles\EventHandlers\" />
     <Folder Include="Resources\" />
     <Folder Include="Services\" />
   </ItemGroup>
