修复一些问题

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -26,4 +26,8 @@
 		<Folder Include="ValueObjects\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Commons\Common\Common.csproj" />
+	</ItemGroup>
+
 </Project>
