--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -42,5 +42,8 @@
     "RefreshExpiresSeconds": 86400,
     "Issuer": "WebAPI",
     "Audience": "Onion"
+  },
+  "SystemSettings": {
+    "HostDomainName": "https://localhost:7251"
   }
 }
