登录接口增加返回个人信息，优化部分代码，添加账号锁定功能

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,11 +1,11 @@
 {
   "DatabaseSettings": {
-    //"DBProvider": "sqlite",
-    //"ConnectionString": "Data Source=Onion.db"
+    "DBProvider": "sqlite",
+    "ConnectionString": "Data Source=Onion.db"
     //"DBProvider": "mssql",
     //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BlazorDashboardDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
-    "DBProvider": "postgresql",
-    "ConnectionString": "Server=81.71.6.38;Database=OnionTest011Db;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
+    //"DBProvider": "postgresql",
+    //"ConnectionString": "Server=81.71.6.38;Database=OnionTest011Db;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
   },
   "Logging": {
     "LogLevel": {
