添加权限白名单校验功能

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -44,6 +44,7 @@
     "Audience": "Onion"
   },
   "SystemSettings": {
-    "HostDomainName": "https://localhost:7251"
+    "HostDomainName": "https://localhost:7251",
+    "PermissionWhiteListUserNames": [ "admin" ]
   }
 }
