--- a/src/Commons/Common/Common.csproj
+++ b/src/Commons/Common/Common.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
