--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,9 +1,11 @@
 {
   "DatabaseSettings": {
-    "DBProvider": "sqlite",
-    "ConnectionString": "Data Source=Onion.db"
+    //"DBProvider": "sqlite",
+    //"ConnectionString": "Data Source=Onion.db", //
+    "DBProvider": "mysql",
+    "ConnectionString": "Server=localhost; Port=3306; Database=OnionDb; Uid=root; Pwd=123456; Charset=utf8mb4;;Allow User Variables=True" //
     //"DBProvider": "mssql",
-    //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=BlazorDashboardDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OnionDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
     //"DBProvider": "postgresql",
     //"ConnectionString": "Server=81.71.6.38;Database=OnionTest016Db;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
   },
