--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     //"DBProvider": "mssql",
     //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OnionDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
     //"DBProvider": "postgresql",
-    //"ConnectionString": "Server=81.71.6.38;Database=OnionTest017Db;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
+    //"ConnectionString": "Server=xx.xx.xx.xx;Database=OnionDb;User Id=postgres;Password=xxxxxxxx;Port=55433"
   },
   "Logging": {
     "LogLevel": {
