--- a/src/UI/public/serverConfig.json
+++ b/src/UI/public/serverConfig.json
@@ -1,6 +1,6 @@
 {
   "Version": "4.5.0",
-  "Title": "PureAdmin",
+  "Title": "洋葱后台管理系统",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
