新增MySQL自动执行迁移

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,9 +1,9 @@
 {
   "DatabaseSettings": {
     //"DBProvider": "sqlite",
-    //"ConnectionString": "Data Source=Onion.db", //
+    //"ConnectionString": "Data Source=Onion.db",
     "DBProvider": "mysql",
-    "ConnectionString": "Server=localhost; Port=3306; Database=OnionDb2; Uid=root; Pwd=123456; Charset=utf8mb4;;Allow User Variables=True" //
+    "ConnectionString": "Server=localhost; Port=3306; Database=OnionDb; Uid=root; Pwd=123456; Charset=utf8mb4;;Allow User Variables=True"
     //"DBProvider": "mssql",
     //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OnionDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
     //"DBProvider": "postgresql",
