--- a/src/UI/package.json
+++ b/src/UI/package.json
@@ -29,6 +29,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@microsoft/signalr": "^7.0.11",
     "@pureadmin/descriptions": "^1.1.1",
     "@pureadmin/table": "^2.3.2",
     "@pureadmin/utils": "^1.9.6",
