--- a/src/Commons/Common/Common.csproj
+++ b/src/Commons/Common/Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="CodeGenPro\T4\" />
     <Folder Include="Utilities\" />
     <Folder Include="Models\" />
     <Folder Include="Logging\" />
@@ -19,7 +20,18 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.11" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="CodeGenPro\T4\AddCommand.tt">
+      <Generator>TemplatingFileGenerator</Generator>
+      <LastGenOutput>AddCommand.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
 </Project>
