--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -47,7 +47,7 @@
   },
   "SystemSettings": {
     "HostDomainName": "https://localhost:7251",
-    "PermissionWhiteListUserNames": [ "admin" ]
+    "PermissionWhiteListUserNames": [ "dev" ]
   },
   "SnowFlakeSettings": {
     "WorkerId": 1, //机器ID 
