--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,13 +1,13 @@
 {
   "DatabaseSettings": {
-    //"DBProvider": "sqlite",
-    //"ConnectionString": "Data Source=Onion.db",
-    "DBProvider": "mysql",
-    "ConnectionString": "Server=localhost; Port=3306; Database=OnionDb; Uid=root; Pwd=123456; Charset=utf8mb4;;Allow User Variables=True"
+    "DBProvider": "sqlite",
+    "ConnectionString": "Data Source=Onion.db",
+    //"DBProvider": "mysql",
+    //"ConnectionString": "Server=localhost; Port=3306; Database=OnionDb; Uid=root; Pwd=123456; Charset=utf8mb4;;Allow User Variables=True"
     //"DBProvider": "mssql",
     //"ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OnionDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
     //"DBProvider": "postgresql",
-    //"ConnectionString": "Server=xxxxxxxx;Database=OnionTest021Db;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
+    //"ConnectionString": "Server=xxxxxxxx;Database=OnionTest022Db;User Id=postgres;Password=WiFi520.aaaa;Port=55433"
   },
   "Logging": {
     "LogLevel": {
