--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -22,7 +22,8 @@
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
 	  <PackageReference Include="LazyCache" Version="2.4.0" />
 	  <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+	  <PackageReference Include="Quartz.AspNetCore" Version="3.7.0" />
+	  <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.7.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.0" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
   </ItemGroup>
