--- a/src/UI/package.json
+++ b/src/UI/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "2.0.10",
+		"@microsoft/signalr": "^7.0.12",
 		"@tinymce/tinymce-vue": "5.0.0",
 		"axios": "1.3.4",
 		"codemirror": "5.65.5",
