--- a/.gitignore
+++ b/.gitignore
@@ -251,7 +251,8 @@ Generated_Code/
 # because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
-UpgradeLog*.XML
+Upgrade
+*.XML
 UpgradeLog*.htm
 ServiceFabricBackup/
 *.rptproj.bak
