前端添加 disconnectSignalR断开方法

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -46,7 +46,7 @@
     "Audience": "Onion"
   },
   "SystemSettings": {
-    "HostDomainName": "https://localhost:7251",
+    "HostDomainName": "http://81.71.6.38:7251",
     "PermissionWhiteListUserNames": [ "dev", "administrator" ]
   },
   "SnowFlakeSettings": {
